--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,11 +65,59 @@
 }
 
 .header__navbar-icon {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     margin: 0 4px;
 }
 
 .header__navbar-title--no-pointer {
     cursor: text;
     color: var(--white-color)
+}
+
+.header__qr {
+    background-color: var(--white-color);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    width: 186px;
+    position: absolute;
+    top: 118%;
+    left: 0;
+    padding: 8px;
+    border-radius: 2px;
+    display: none;
+    animation: fadeIn ease-in 0.3s;
+}
+
+.header__qr::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -16px;
+    display: block;
+    width: 100%;
+    height: 18px;
+}
+
+.header__qr-img {
+    width: 100%;
+}
+
+.header__qr-apps {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__qr-link:nth-child(1) {
+    margin-left: 11px;
+}
+
+.header__qr-link:nth-child(2) {
+    margin-right: 11px;
+}
+
+.header__dowloader-img {
+    height: 16px;
+}
+
+.header__navbar-item--has-qr:hover .header__qr {
+    display: block;
 }
