--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,232 +1,247 @@
-.header {
-    height: 120px;
-    background-image: linear-gradient(0, #fe6433, #f53e2d);
-}
-
-.header__navbar {
-    display: flex;
-    justify-content: space-between;
-}
-
-.header__navbar-list {
-    list-style: none;
-    padding-left: 0;
-    margin-top: 4px;
-}
-
-.header__navbar-item {
-    margin: 0 8px;
-    position: relative;
-    min-height: 26px;
-}
-
-.header__navbar-item,
-.header__navbar-item-link {
-    display: inline-block;
-    font-size: 1.4rem;
-    color: var(--white-color);
-    text-decoration: none;
-    font-weight: 300;
-}
-
-.header__navbar-item,
-.header__navbar-item-link,
-.header__navbar-icoin-link,
-.header__navbar-list {
-    display: inline-flex;
-    align-items: center;
-}
-
-.header__navbar-item:hover,
-.header__navbar-item-link:hover,
-.header__navbar-icoin-link:hover {
-    color: rgba(255, 255, 255, 0.7);
-    cursor: pointer;
-}
-
-.header__navbar-item--strong {
-    font-weight: 400;
-}
-
-.header__navbar-item--separate::after {
-    content: "";
-    display: block;
-    position: absolute;
-    border-left: 1px solid #FB9086;
-    height: 14px;
-    right: -9px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.header__navbar-icoin-link {
-    color: var(--white-color);
-    text-decoration: none;
-}
-
-.header__navbar-icon {
-    font-size: 1.6rem;
-    margin: 0 4px;
-}
-
-.header__navbar-title--no-pointer {
-    cursor: text;
-    color: var(--white-color)
-}
-
-.header__qr {
-    background-color: var(--white-color);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    width: 186px;
-    position: absolute;
-    top: 118%;
-    left: 0;
-    padding: 8px;
-    border-radius: 2px;
-    display: none;
-    animation: fadeIn ease-in 0.3s;
-}
-
-.header__qr::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: -16px;
-    display: block;
-    width: 100%;
-    height: 18px;
-}
-
-.header__qr-img {
-    width: 100%;
-}
-
-.header__qr-apps {
-    display: flex;
-    justify-content: space-between;
-}
-
-.header__qr-link:nth-child(1) {
-    margin-left: 11px;
-}
-
-.header__qr-link:nth-child(2) {
-    margin-right: 11px;
-}
-
-.header__dowloader-img {
-    height: 16px;
-}
-
-.header__navbar-item--has-qr:hover .header__qr {
-    display: block;
-}
-
-.header__navbar-item--has-notify:hover .header__notify {
-    display: block;
-}
-
-
-/* header notify */
-
-.header__notify {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: 404px;
-    background-color: var(--white-color);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transform-origin: calc(100% - 20px) top;
-    animation: headerNotifyGrowth ease-in 0.3s;
-    display: none;
-}
-
-@keyframes headerNotifyGrowth {
-    from {
-        opacity: 0;
-        transform: scale(0);
+    .header {
+        height: 120px;
+        background-image: linear-gradient(0, #fe6433, #f53e2d);
     }
-    to {
-        opacity: 1;
-        transform: scale(1);
+    
+    .header__navbar {
+        display: flex;
+        justify-content: space-between;
     }
-}
-
-.header__notify-header {
-    height: 40px;
-    background-color: var(--white-color);
-    cursor: default;
-}
-
-.header__notify-header h3 {
-    color: #999;
-    font-weight: 400;
-    margin: 0 0 0 12px;
-    line-height: 40px;
-    font-size: 1.4rem;
-}
-
-.header__notify-list {
-    padding-left: 0;
-}
-
-.header__notify-item {
-    display: flex;
-    width: 100%;
-}
-
-.header__notify-item:hover {
-    background-color: #f7f7f7;
-}
-
-.header__notify-item--viewed {
-    background-color: rgba(238, 75, 43, 0.1);
-}
-
-.header__notify-link {
-    display: flex;
-    text-decoration: none;
-    padding: 12px;
-}
-
-.header__notify-img {
-    width: 48px;
-    object-fit: contain;
-}
-
-.header__notify-info {
-    margin-left: 12px;
-}
-
-.header__notify-name {
-    display: block;
-    color: var(--text-color);
-    font-size: 1.4rem;
-    font-weight: 400;
-    margin-bottom: 4px;
-}
-
-.header__notify-description {
-    display: block;
-    color: #756F6E;
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-}
-
-.header__notify-footer {
-    text-align: center;
-    height: 35px;
-}
-
-.header__notify-footer-btn {
-    text-decoration: none;
-    background-color: var(--white-color);
-    color: var(--text-color);
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 35px;
-    display: block;
-}
-
-
-/* header notify end*/
+    
+    .header__navbar-list {
+        list-style: none;
+        padding-left: 0;
+        margin-top: 4px;
+    }
+    
+    .header__navbar-item {
+        margin: 0 8px;
+        position: relative;
+        min-height: 26px;
+    }
+    
+    .header__navbar-item,
+    .header__navbar-item-link {
+        display: inline-block;
+        font-size: 1.4rem;
+        color: var(--white-color);
+        text-decoration: none;
+        font-weight: 300;
+    }
+    
+    .header__navbar-item,
+    .header__navbar-item-link,
+    .header__navbar-icoin-link,
+    .header__navbar-list {
+        display: inline-flex;
+        align-items: center;
+    }
+    
+    .header__navbar-item:hover,
+    .header__navbar-item-link:hover,
+    .header__navbar-icoin-link:hover {
+        color: rgba(255, 255, 255, 0.7);
+        cursor: pointer;
+    }
+    
+    .header__navbar-item--strong {
+        font-weight: 400;
+    }
+    
+    .header__navbar-item--separate::after {
+        content: "";
+        display: block;
+        position: absolute;
+        border-left: 1px solid #FB9086;
+        height: 14px;
+        right: -9px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    
+    .header__navbar-icoin-link {
+        color: var(--white-color);
+        text-decoration: none;
+    }
+    
+    .header__navbar-icon {
+        font-size: 1.6rem;
+        margin: 0 4px;
+    }
+    
+    .header__navbar-title--no-pointer {
+        cursor: text;
+        color: var(--white-color)
+    }
+    
+    .header__qr {
+        background-color: var(--white-color);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        width: 186px;
+        position: absolute;
+        top: 118%;
+        left: 0;
+        padding: 8px;
+        border-radius: 2px;
+        display: none;
+        animation: fadeIn ease-in 0.3s;
+    }
+    
+    .header__qr::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: -16px;
+        display: block;
+        width: 100%;
+        height: 18px;
+    }
+    
+    .header__qr-img {
+        width: 100%;
+    }
+    
+    .header__qr-apps {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .header__qr-link:nth-child(1) {
+        margin-left: 11px;
+    }
+    
+    .header__qr-link:nth-child(2) {
+        margin-right: 11px;
+    }
+    
+    .header__dowloader-img {
+        height: 16px;
+    }
+    
+    .header__navbar-item--has-qr:hover .header__qr {
+        display: block;
+    }
+    
+    .header__navbar-item--has-notify:hover .header__notify {
+        display: block;
+    }
+    /* header notify */
+    
+    .header__notify {
+        position: absolute;
+        top: 118%;
+        right: 0;
+        width: 404px;
+        background-color: var(--white-color);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        transform-origin: calc(100% - 20px) top;
+        animation: headerNotifyGrowth ease-in 0.3s;
+        display: none;
+    }
+    
+    .header__notify::before {
+        content: "";
+        border-width: 20px 26px;
+        border-style: solid;
+        border-color: transparent transparent var(--white-color) transparent;
+        position: absolute;
+        right: 10px;
+        top: -30px;
+    }
+    
+    .header__notify::after {
+        content: "";
+        width: 90px;
+        height: 25px;
+        position: absolute;
+        right: 0;
+        top: -15px;
+    }
+    
+    @keyframes headerNotifyGrowth {
+        from {
+            opacity: 0;
+            transform: scale(0);
+        }
+        to {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+    
+    .header__notify-header {
+        height: 40px;
+        background-color: var(--white-color);
+        cursor: default;
+    }
+    
+    .header__notify-header h3 {
+        color: #999;
+        font-weight: 400;
+        margin: 0 0 0 12px;
+        line-height: 40px;
+        font-size: 1.4rem;
+    }
+    
+    .header__notify-list {
+        padding-left: 0;
+    }
+    
+    .header__notify-item {
+        display: flex;
+        width: 100%;
+    }
+    
+    .header__notify-item:hover {
+        background-color: #f7f7f7;
+    }
+    
+    .header__notify-item--viewed {
+        background-color: rgba(238, 75, 43, 0.1);
+    }
+    
+    .header__notify-link {
+        display: flex;
+        text-decoration: none;
+        padding: 12px;
+    }
+    
+    .header__notify-img {
+        width: 48px;
+        object-fit: contain;
+    }
+    
+    .header__notify-info {
+        margin-left: 12px;
+    }
+    
+    .header__notify-name {
+        display: block;
+        color: var(--text-color);
+        font-size: 1.4rem;
+        font-weight: 400;
+        margin-bottom: 4px;
+    }
+    
+    .header__notify-description {
+        display: block;
+        color: #756F6E;
+        font-size: 1.2rem;
+        line-height: 1.6rem;
+    }
+    
+    .header__notify-footer {
+        text-align: center;
+        height: 35px;
+    }
+    
+    .header__notify-footer-btn {
+        text-decoration: none;
+        background-color: var(--white-color);
+        color: var(--text-color);
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 35px;
+        display: block;
+    }
+    /* header notify end*/
