--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,7 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         transform-origin: calc(100% - 20px) top;
         animation: headerNotifyGrowth ease-in 0.3s;
+        will-change: opacity, transform;
         display: none;
     }
     
