--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,9 @@
     --text-color: #333;
     --primary-color: #EE4D2D;
     --border-color: #dbdbdb;
+    --header-height: 120px;
+    --narbar-height: 34px;
+    --header-with-search-height: calc(var(--header-height) - var(--narbar-height))
 }
 
 * {
@@ -41,6 +44,15 @@ html {
     }
 }
 
+@keyframes Growth {
+    from {
+        transform: scale(var(--growth-from))
+    }
+    to {
+        transform: scale(var(--growth-to))
+    }
+}
+
 
 /* modal */
 
@@ -51,6 +63,7 @@ html {
     bottom: 0;
     left: 0;
     display: flex;
+    animation: fadeIn linear 0.1s;
 }
 
 .modal__overlay {
@@ -61,9 +74,12 @@ html {
 }
 
 .modal__body {
+    --growth-from: 0.7;
+    --growth-to: 1;
     position: relative;
     margin: auto;
     z-index: 1;
+    animation: Growth linear 0.1s;
 }
 
 
