--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,11 +84,13 @@
 .header__navbar-user-menu::before {
     content: "";
     display: block;
-    width: 100px;
+    min-width: 60%;
     height: 15px;
     position: absolute;
     top: -10px;
     right: 0;
+    /* left: 55%; */
+    background-color: black;
 }
 
 .header__navbar-user-menu::after {
@@ -858,4 +860,65 @@
 
 .header__search-option-item--active i {
     display: inline-block;
+}
+
+
+/* app container */
+
+.app__container {
+    background-color: #F5F5F5;
+}
+
+.category {
+    background-color: var(--white-color);
+    border-radius: 3px;
+}
+
+.category-heading {
+    font-size: 1.6rem;
+    padding: 12px 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.category-heading__icon {
+    font-size: 1.2rem;
+    margin-right: 4px;
+    position: relative;
+    bottom: 1px;
+}
+
+.category-list {
+    list-style: none;
+    padding: 0 0 6px 0;
+    margin-left: 4px;
+}
+
+.category-item__active .category-item__link {
+    color: var(--primary-color);
+}
+
+.category-item__active .category-item__link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 14px;
+    transform: translateY(calc(-50% - 1px));
+    border: 4px solid;
+    border-color: transparent transparent transparent var(--primary-color);
+}
+
+.category-item__link {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    padding: 10px 26px;
+    display: block;
+    position: relative;
+    right: 0;
+    transition: right linear 0.1s;
+}
+
+.category-item__link:hover {
+    right: -4px;
+    color: var(--primary-color);
 }
