--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -572,6 +572,8 @@
 .header__cart-list-item {
     padding-left: 0;
     list-style: none;
+    height: 45vh;
+    overflow-y: auto;
 }
 
 .header__cart-item {
@@ -820,6 +822,7 @@
     display: none;
     overflow: hidden;
     animation: fadeIn ease-in 0.3s;
+    z-index: 1;
 }
 
 .header__search-select:hover .header__search-option {
@@ -1108,7 +1111,7 @@
 
 .home-product-item__origin {
     display: flex;
-    margin: 6px 10px 0;
+    padding: 4px 10px;
     font-size: 1.2rem;
     color: #595959;
     font-weight: 300;
@@ -1117,8 +1120,6 @@
 .home-product-item__brand {
     margin-right: auto;
 }
-
-.home-product-item__origin-name {}
 
 .home-product-item__favourit {
     position: absolute;
@@ -1184,4 +1185,11 @@
     font-size: 1.2rem;
     color: var(--white-color);
     font-weight: 600;
+}
+
+
+/* pagination */
+
+.home-product__pagination {
+    margin: 48px 0 32px 0;
 }
