--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -6,6 +6,7 @@
     --star-gold-color: #FFCE3E;
     --border-color: #dbdbdb;
     --header-height: 120px;
+    --header-height-sort-bar: 46px;
     --narbar-height: 34px;
     --header-with-search-height: calc(var(--header-height) - var(--narbar-height))
 }
@@ -19,16 +20,6 @@ html {
     line-height: 1.6rem;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
-}
-
-.grid {
-    width: 1200px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-.grid__full-width {
-    width: 100%;
 }
 
 .grid__row {
